# opengles-md2loader-android

./: .project  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: basic.frag  basic.vert  grunt.tga
app/src/main/cpp/opengl/: CMakeLists.txt  Logger.h  MD2Model.cpp  MD2Model.h  Md2.cpp  Md2.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture2D.cpp  Texture2D.h  native-lib.cpp
app/src/main/java/org/raydelto/md2loader/: MainActivity.kt  MyRenderer.kt
app/src/main/res/layout/: activity_drawing.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
